vera_lang/vera_lang.ebnf
program       = block

block         = "main" "{" stmt_list "}"

stmt_list     = stmt*
stmt          = assignment
              | if_statement
              | function_call
              | declaration
              | "return" expression ";"
              | "break" ";"
              | "continue" ";"

assignment    = identifier "=" expression ";"

if_statement  = "if" condition "{" stmt_list "}"
              | "if" condition "{" stmt_list "}" "else" "{" stmt_list "}"

condition     = expression

declaration   = type identifier ";"

type          = "int" | "float" | "string" | "bool"

function_call = identifier "(" arg_list ")"

arg_list      = expression ("," expression)*

expression    = term (("+" | "-") term)*

term          = factor (("*" | "/") factor)*

factor        = identifier
              | number
              | string
              | "true"
              | "false"
              | "(" expression ")"

identifier    = letter (letter | digit | "_")*

number        = integer | floating

integer       = (digit)+
floating      = (digit)+ "." (digit)*

letter        = "a" | "b" | ... | "z" | "A" | ... | "Z"

digit         = "0" | "1" | ... | "9"

string        = "\"" (character | " ")* "\""

character     = any printable character

end_line      = ";"
